<resources>
    <string name="app_name">Store</string>
    <string name="action_settings">Settings</string>
    <string name="Splash_Text">Store</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_data">Delete All Products</string>
    <string name="empty_view_title_text">Your Store empty now</string>
    <string name="empty_view_subtitle_text">Please , Insert a new Product</string>
    <string name="unsaved_changed_dialog_msg">Discard your changes and quit editing ?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="add_a_Product">Add a Product</string>
    <string name="edit_a_produt">Edit a Product</string>
    <string name="order_more">Order more</string>
    <string name="delete_item">Delete item</string>
    <string name="select_to_order_more">Please , select type of order for this item phone or e-mail</string>
    <string name="phone">PHONE</string>
    <string name="email">E-mail</string>
    <string name="accept_delete">Delete</string>
    <string name="delete_one_item">Are you sure you want to delete this product ?</string>
    <string name="cancel">Cancel</string>
    <string name="search_product">Search</string>
    <string name="save_product">Save</string>
    <string name="product">Product</string>
    <string name="supplier">Supplier</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_supp_name">Supp Name</string>
    <string name="hint_supp_phone">Supp Phone</string>
    <string name="hint_supp_mail">Supp E-mail</string>
    <string name="sale">Sale</string>
</resources>
